deploy/dashboard/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: deluluscan-dashboard-svc
  namespace: deluluscan
spec:
  type: NodePort
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    fullname: deluluscan-security-dashboard
